--- a/index.html
+++ b/index.html
@@ -96,22 +96,22 @@
                 isActive: true
             },
             {
-                id: 'laptop-record',
-                name: 'Rekod Penggunaan Laptop',
-                description: 'Log digital untuk peminjaman dan pemulangan laptop sekolah bagi tujuan PdP.',
-                url: '#',
-                icon: 'laptop',
-                color: 'teal',
-                category: 'Logistik Digital',
-                isActive: false
-            },
-            {
                 id: 'bilik-khas-record',
                 name: 'Rekod Penggunaan Bilik Khas',
                 description: 'Sistem log digital untuk merekod penggunaan bilik-bilik khas sekolah bagi tujuan aktiviti dan PdP.',
                 url: 'https://6003rekodpenggunaanbilikkhas.netlify.app/',
                 icon: 'door-open',
                 color: 'indigo',
+                category: 'Logistik Digital',
+                isActive: true
+            },
+            {
+                id: 'peralatan-ict-record',
+                name: 'Rekod Penggunaan Peralatan ICT',
+                description: 'Sistem log digital untuk merekod penggunaan pelbagai peralatan ICT sekolah seperti projektor, speaker, dan lain-lain.',
+                url: 'https://6003rekodpenggunaanperalatanict.netlify.app/',
+                icon: 'monitor',
+                color: 'blue',
                 category: 'Logistik Digital',
                 isActive: true
             }
